Altered size and padding of some images to correct overflow issue on ipad viewport

--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ video {
     flex: initial;
     border: 1px solid transparent;
     border-radius: 25px;
-    margin: 10px 5px;
+    margin: 5px;
 }
 
 /*-------------- Audio Section ---------------*/
